salesforce/ReSalesforceCore/force-app/main/default/objects/ERP_Warehouse__c/ERP_Warehouse__c.object-meta.xml
<CustomObject>
    <label>Depo</label>
    <nameField><label>Depo AdÄ±</label><type>Text</type></nameField>
    <pluralLabel>Depolar</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>