salesforce/ReSalesforceCore/force-app/main/default/objects/ERP_Warehouse__c/fields/Code__c.field-meta.xml
<CustomField>
    <fullName>Code__c</fullName>
    
    <label>Depo Kodu</label>
    <required>true</required>
    <type>Text</type>
    <length>50</length>
</CustomField>