salesforce/ReSalesforceCore/force-app/main/default/objects/ERP_Warehouse__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    
    <label>AÃ§Ä±klama</label>
    
    <type>LongTextArea</type>
    <length>4000</length><visibleLines>3</visibleLines>
</CustomField>