salesforce/ReSalesforceCore/force-app/main/default/objects/ERP_Warehouse__c/fields/External_Id__c.field-meta.xml
<CustomField>
    <fullName>External_Id__c</fullName>
    <externalId>true</externalId><unique>true</unique>
    <label>ERP Harici Kimlik</label>
    
    <type>Text</type>
    <length>36</length>
</CustomField>