salesforce/ReSalesforceCore/force-app/main/default/objects/ERP_Warehouse__c/fields/Is_Default__c.field-meta.xml
<CustomField>
    <fullName>Is_Default__c</fullName>
    
    <label>VarsayÄ±lan Depo</label>
    
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>